--- a/frontend/src/ui/wrapper/wrapper.module.css
+++ b/frontend/src/ui/wrapper/wrapper.module.css
@@ -1,6 +1,7 @@
 .wrapper {
   display: flex;
   flex-direction: column;
+  flex-grow: 1;
   height: 100%;
   gap: var(--mantine-spacing-md);
   align-self: stretch;
